--- a/index.html
+++ b/index.html
@@ -103,19 +103,13 @@ body::after {
     	content: "⇲";
     }
     */
-    
   
-	h2 {
-		list-style: none;
-    	font-family: var(--font);
-    	font-size: 30px;
-    	font-weight: normal;
-    	margin-top: 5px; /* Adjust the top margin as needed */
-    	margin-bottom: 10px; /* Adjust the bottom margin as needed */
-    	padding-left: var(--inset); /* Adjust the left padding as needed */
-    	padding-right: 10px; /* Adjust the right padding as needed */
+
+	h2{
+      padding-left: var(--inset);
 	}
-    
+
+
     p{
         padding-left: var(--inset); /* Adjust the left padding as needed */
         font-family: var(--font);
@@ -165,7 +159,10 @@ Portfolio
 <details>
 	<summary> [Item 0 - Pure C Strings]:</summary>
 	<hr>
-	<h2><a href="https://github.com/TobinCavanaugh/Pure-C-Strings">Pure C Strings</a></h2>
+    <h2>
+    <a href="https://github.com/TobinCavanaugh/Pure-C-Strings">Pure C Strings</a>   
+    </h2>
+
 	<p>A simple .c and .h file for making mutable strings in pure C</p>
   	
     <blockquote> 
