--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <hr style="border:none; border-top: 3px solid var(--amber)">
 
     <h2>
-        <a href="https://github.com/TobinCavanaugh/Pure-C-Strings">Pure C Strings</a>
+        <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" onclick="playSound('click')">Pure C Strings</a>
     </h2>
 
     <p>A simple .c and .h file for making mutable strings in pure C</p>
