--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <details onclick="playSound('click')" onmouseover="playSound('hoverclick')">
 
-    <summary>[Item 0 - Pure C Strings]:</summary>
+    <summary>C:\Portfolio\PureCStrings\</summary>
 
     <hr style="border:none; border-top: 3px solid var(--amber)">
 
@@ -20,7 +20,7 @@
 
     <p>A simple .c and .h file for making mutable strings in pure C</p>
 
-    <blockquote id="fallout-blockquote">
+    <blockquote>
 
         - Pure C Strings using char arrays inside of a special struct named PureString. <br><br>
 
@@ -39,15 +39,36 @@
 
     </blockquote>
 
-    <img class="fit-width"
-         src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" height="300" alt="Image of header file"/>
+    <img class="fit-width custom-img"
+         src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" height="300"
+         alt="Image of header file"
+    />
     <hr style="border:none; border-top: 3px solid var(--amber)">
-
 
 </details>
 
 <details onclick="playSound('click')" onmouseover="playSound('hoverclick')">
-    <summary> [Item 1 - Pure C Strings]:</summary>
+    <summary>C:\Portfolio\WindowsSnake\</summary>
     <hr style="border:none; border-top: 3px solid var(--amber)">
+
+    <h2>
+        <a href="https://github.com/TobinCavanaugh/WindowsSnake" onclick="playSound('click')">
+            Windows <img
+                class="s-offset"
+                src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/newico.png"
+                width="20"
+                >nake
+        </a>
+    </h2>
+
+    <p>Snake but each pixel is its own Windows window, shockingly NOT crossplatform. Windows only!</p>
+
+    <blockquote>
+        - I wanted to make a stupid but still functional application using my new knowledge of C. I also wanted to learn more about the C Windows API, and I settled on making a game constructed out of windows. My first thought was tetris, however after I solved the problem of displaying and coloring windows, I realized Tetris is hard to program, and that snake would get the same point across while being much easier to program.
+
+    </blockquote>
+    <hr style="border:none; border-top: 3px solid var(--amber)">
+
+
 
 </details>
