much more performant, new scaling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <summary>C:\Portfolio\PureCStrings\</summary>
 
-    <hr style="border:none; border-top: 3px solid var(--amber)">
+    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
 
     <h2>
         <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" onclick="playSound('click')">Pure C Strings</a>
@@ -43,20 +43,20 @@
          src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" height="300"
          alt="Image of header file"
     />
-    <hr style="border:none; border-top: 3px solid var(--amber)">
+    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
 
 </details>
 
 <details onclick="playSound('click')" onmouseover="playSound('hoverclick')">
     <summary>C:\Portfolio\WindowsSnake\</summary>
-    <hr style="border:none; border-top: 3px solid var(--amber)">
+    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
 
     <h2>
         <a href="https://github.com/TobinCavanaugh/WindowsSnake" onclick="playSound('click')">
             Windows <img
                 class="s-offset"
                 src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/newico.png"
-                width="20"
+                width=0.4vh
                 >nake
         </a>
     </h2>
@@ -67,7 +67,7 @@
         - I wanted to make a stupid but still functional application using my new knowledge of C. I also wanted to learn more about the C Windows API, and I settled on making a game constructed out of windows. My first thought was tetris, however after I solved the problem of displaying and coloring windows, I realized Tetris is hard to program, and that snake would get the same point across while being much easier to program.
 
     </blockquote>
-    <hr style="border:none; border-top: 3px solid var(--amber)">
+    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
 
 
 
