New scaling and bg gradient

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
+<div class="centerGradient"></div>
 <div class="bg"></div>
 
 <header>
     Portfolio
 </header>
 
-<button class="top-right-button" onclick="idleHum()">Enable Sound (Recommended)</button>
+<!-- <button class="top-right-button" onclick="idleHum()"> </button>  !-->
+
+<img class="top-right-button" onclick="idleHum()" src="Speaker_Icon.png" width=40em>
 
 <details onclick="playSound('click')" onmouseover="playSound('hoverclick')">
 
@@ -54,9 +57,9 @@
     <h2>
         <a href="https://github.com/TobinCavanaugh/WindowsSnake" onclick="playSound('click')">
             Windows <img
-                class="s-offset"
+                class="s-offset fit-width"
                 src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/newico.png"
-                width=0.4vh
+                width=20em
                 >nake
         </a>
     </h2>
