--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <!-- <button class="top-right-button" onclick="idleHum()"> </button>  !-->
 
-<img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Speaker_Icon.png','Mute_Icon.png')" src="Mute_Icon.png" width=40em>
+<img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Icons/Speaker_Icon.png','Icons/Mute_Icon.png')" src="Icons/Mute_Icon.png" width=40em>
 
 <details onclick="playSound('click', this)">
 
     <summary onmouseenter="playSound('hoverclick')">C:\Portfolio\PureCStrings\</summary>
 
-    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
+    <hr class="line">
 
     <h2 onmouseenter="playSound('hoverclick')">
         <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" onclick="playSound('click')">Pure C Strings</a>
@@ -43,22 +43,19 @@
          src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" height="300" loading="lazy"
          alt="Image of header file"
     />
-    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
+
+    <p></p>
+
+    <hr class="line">
 
 </details>
 
 <details onclick="playSound('click', this)" onmouseover="playSound('hoverclick')">
     <summary onmouseover="playSound('hoverclick')">C:\Portfolio\WindowsSnake\</summary>
-    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
+    <hr class="line">
 
     <h2>
-        <a href="https://github.com/TobinCavanaugh/WindowsSnake" onclick="playSound('click')">
-            Windows <img
-                class="s-offset fit-width"
-                src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/newico.png"
-                width=20em
-                >nake
-        </a>
+        <a href="https://github.com/TobinCavanaugh/WindowsSnake" onclick="playSound('click')">Windows Snake</a>
     </h2>
 
     <p>Snake but each pixel is its own Windows window, shockingly NOT crossplatform. Windows only!</p>
@@ -66,7 +63,10 @@
     <blockquote>
         - I wanted to make a stupid but still functional application using my new knowledge of C. I also wanted to learn more about the C Windows API, and I settled on making a game constructed out of windows. My first thought was tetris, however after I solved the problem of displaying and coloring windows, I realized Tetris is hard to program, and that snake would get the same point across while being much easier to program.
     </blockquote>
-    <hr style="border:none; border-top: 0.4vh solid var(--amber)">
+
+
+    <p></p>
+    <hr class="line">
 
 
 
