clicking links now opens in new tab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <!-- <button class="top-right-button" onclick="idleHum()"> </button>  !-->
 
-<img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Icons/Speaker_Icon.png','Icons/Mute_Icon.png')" src="Icons/Mute_Icon.png" width=40em>
+<img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Icons/Speaker_Icon.png','Icons/Mute_Icon.png')"
+     src="Icons/Mute_Icon.png" width=40em>
 
 <details onclick="playSound('click', this)">
 
@@ -20,7 +21,8 @@
     <hr class="line">
 
     <h2 onmouseenter="playSound('hoverclick')">
-        <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" onclick="playSound('click')">Pure C Strings</a>
+        <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" target="_blank"
+           onclick="playSound('click')">Pure C Strings</a>
     </h2>
 
     <p>A simple .c and .h file for making mutable strings in pure C</p>
@@ -40,7 +42,8 @@
     </blockquote>
 
     <img class="fit-width custom-img"
-         src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" height="300" loading="lazy"
+         src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" height="300"
+         loading="lazy"
          alt="Image of header file"
     />
 
@@ -55,19 +58,22 @@
     <hr class="line">
 
     <h2>
-        <a href="https://github.com/TobinCavanaugh/WindowsSnake" onclick="playSound('click')">Windows Snake</a>
+        <a href="https://github.com/TobinCavanaugh/WindowsSnake" target="_blank"
+           onclick="playSound('click')">Windows Snake</a>
     </h2>
 
     <p>Snake but each pixel is its own Windows window, shockingly NOT crossplatform. Windows only!</p>
 
     <blockquote>
-        - I wanted to make a stupid but still functional application using my new knowledge of C. I also wanted to learn more about the C Windows API, and I settled on making a game constructed out of windows. My first thought was tetris, however after I solved the problem of displaying and coloring windows, I realized Tetris is hard to program, and that snake would get the same point across while being much easier to program.
+        - I wanted to make a stupid but still functional application using my new knowledge of C. I also wanted to learn
+        more about the C Windows API, and I settled on making a game constructed out of windows. My first thought was
+        tetris, however after I solved the problem of displaying and coloring windows, I realized Tetris is hard to
+        program, and that snake would get the same point across while being much easier to program.
     </blockquote>
 
 
     <p></p>
     <hr class="line">
-
 
 
 </details>
