--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
+<meta name="viewport" content="width=device-width">
+
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 <div class="centerGradient"></div>
 <div class="noise-layer"></div>
+
+
+<title>Tobin Cavanaugh Portfolio</title>
 
 <!--Main Header-->
 <header>
