--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html lang="en">
-<meta name="viewport" content="width=device-width">
+<!DOCTYPE html>
+
+<html lang="en">
+<meta name="description" description="Retro CRT amber styled portfolio website for Tobin Cavanaugh"
+    content="Author: Tobin Cavanaugh, Category: Portfolio, ">
 
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
@@ -18,7 +21,7 @@
 
 <!--Mute/Unmute Button-->
 <img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Icons/Speaker_Icon.png','Icons/Mute_Icon.png')"
-     src="Icons/Mute_Icon.png" width=40em>
+    src="Icons/Mute_Icon.png" width=40em alt="Image of a muted/unmuted speaker">
 
 
 <!--Upon The Wind-->
@@ -29,8 +32,8 @@
 
     <h2>
         <!----Git URL -->
-        <a href="https://github.com/TobinCavanaugh/OnAWing" target="_blank"
-           onclick="playSound('click')">Upon The Wind</a>
+        <a href="https://github.com/TobinCavanaugh/OnAWing" target="_blank" onclick="playSound('click')">Upon The
+            Wind</a>
         <!------------------------Project Name-->
 
     </h2>
@@ -49,18 +52,14 @@
     <blockquote>Windows Snake on the desktop:</blockquote>
 
     <img class="custom-img"
-         src="https://user-images.githubusercontent.com/71297845/209590366-c0d978cd-6c7e-461f-a8c4-3ef65488694e.png"
-         loading="lazy"
-         alt="Image of header file"
-    />
+        src="https://user-images.githubusercontent.com/71297845/209590366-c0d978cd-6c7e-461f-a8c4-3ef65488694e.png"
+        loading="lazy" alt="Image of header file" />
 
     <p></p>
 
     <img class="custom-img"
-         src="https://user-images.githubusercontent.com/71297845/209590362-3e08449f-7f7c-49a6-b69a-9c58c1dc2e21.png"
-         loading="lazy"
-         alt="Image of header file"
-    />
+        src="https://user-images.githubusercontent.com/71297845/209590362-3e08449f-7f7c-49a6-b69a-9c58c1dc2e21.png"
+        loading="lazy" alt="Image of header file" />
 
     <p></p>
     <hr class="line">
@@ -74,8 +73,8 @@
     <hr class="line">
 
     <h2 onmouseenter="playSound('hoverclick')">
-        <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" target="_blank"
-           onclick="playSound('click')">Pure C Strings</a>
+        <a href="https://github.com/TobinCavanaugh/Pure-C-Strings" target="_blank" onclick="playSound('click')">Pure C
+            Strings</a>
     </h2>
 
     <p>A simple .c and .h file for making mutable strings in pure C</p>
@@ -94,10 +93,8 @@
     </blockquote>
 
     <img class="custom-img"
-         src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png"
-         loading="lazy"
-         alt="Image of header file"
-    />
+        src="https://raw.githubusercontent.com/TobinCavanaugh/Pure-C-Strings/master/gitpage/header.png" loading="lazy"
+        alt="Image of header file" />
 
     <p></p>
 
@@ -111,8 +108,8 @@
     <hr class="line">
 
     <h2>
-        <a href="https://github.com/TobinCavanaugh/WindowsSnake" target="_blank"
-           onclick="playSound('click')">Windows Snake</a>
+        <a href="https://github.com/TobinCavanaugh/WindowsSnake" target="_blank" onclick="playSound('click')">Windows
+            Snake</a>
     </h2>
 
     <p>Snake but each pixel is its own Windows window, shockingly NOT crossplatform. Windows only!</p>
@@ -126,19 +123,13 @@
 
     <blockquote>Windows Snake on the desktop:</blockquote>
 
-    <img class="custom-img"
-         src="https://github.com/TobinCavanaugh/WindowsSnake/raw/master/desktop.png"
-         loading="lazy"
-         alt="An image of a snake game being played on the desktop"
-    />
+    <img class="custom-img" src="https://github.com/TobinCavanaugh/WindowsSnake/raw/master/desktop.png" loading="lazy"
+        alt="An image of a snake game being played on the desktop" />
 
     <blockquote>Windows Snake in front of Clion:</blockquote>
 
-    <img class="custom-img"
-         src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/codeimage.png"
-         loading="lazy"
-         alt="An image of a snake game being played over the IDE clion"
-    />
+    <img class="custom-img" src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/codeimage.png"
+        loading="lazy" alt="An image of a snake game being played over the IDE clion" />
 
     <p></p>
     <hr class="line">
@@ -153,7 +144,7 @@
     <h2>
         <!----Git URL -->
         <a href="https://github.com/TobinCavanaugh/Open-Blend-Directory" target="_blank"
-           onclick="playSound('click')">Open Blend Directory</a>
+            onclick="playSound('click')">Open Blend Directory</a>
         <!------------------------Project Name-->
 
     </h2>
@@ -181,10 +172,8 @@
     <blockquote>Open Blend Directory in action:</blockquote>
 
     <img class="custom-img"
-         src="https://user-images.githubusercontent.com/71297845/239706698-c150ded9-b676-467e-a1ef-e186d8005d71.gif"
-         loading="lazy"
-         alt="Gif of blender, user presses alt + shift + r and a windows explorer opens"
-    />
+        src="https://user-images.githubusercontent.com/71297845/239706698-c150ded9-b676-467e-a1ef-e186d8005d71.gif"
+        loading="lazy" alt="Gif of blender, user presses alt + shift + r and a windows explorer opens" />
 
     <p></p>
     <hr class="line">
@@ -200,8 +189,8 @@
 
     <h2>
         <!----Git URL -->
-        <a href="https://github.com/TobinCavanaugh/FocalPoint" target="_blank"
-           onclick="playSound('click')">Focal Point</a>
+        <a href="https://github.com/TobinCavanaugh/FocalPoint" target="_blank" onclick="playSound('click')">Focal
+            Point</a>
         <!------------------------Project Name-->
 
     </h2>
@@ -212,9 +201,12 @@
     <!--From Git Page-------------->
     <!--use <blockquote> for text-->
     <blockquote>
-        - Trapped in an abandoned mine after the entrance collapsed, you must escape from a wendigo, taking advantage of the tools left behind by the miners.
+        - Trapped in an abandoned mine after the entrance collapsed, you must escape from a wendigo, taking advantage of
+        the tools left behind by the miners.
 
-        - The moment to moment gameplay consists of searching for gas canisters, delivering four of them to the generator, and eventually making your way into the elevator, all while avoiding the horrifying native american legend.
+        - The moment to moment gameplay consists of searching for gas canisters, delivering four of them to the
+        generator, and eventually making your way into the elevator, all while avoiding the horrifying native american
+        legend.
     </blockquote>
 
     <blockquote></blockquote>
@@ -222,10 +214,8 @@
     <p></p>
 
     <img class="custom-img"
-         src="https://github.com/TobinCavanaugh/FocalPoint/raw/main/GithubMarkdown/FocalPointMMGif.gif"
-         loading="lazy"
-         alt="Image of header file"
-    />
+        src="https://github.com/TobinCavanaugh/FocalPoint/raw/main/GithubMarkdown/FocalPointMMGif.gif" loading="lazy"
+        alt="Image of header file" />
 
 
     <p></p>
@@ -243,8 +233,7 @@
 
     <h2>
         <!----Git URL -->
-        <a href="" target="_blank"
-           onclick="playSound('click')"></a>
+        <a href="" target="_blank" onclick="playSound('click')"></a>
         <!------------------------Project Name-->
 
     </h2>
@@ -263,12 +252,11 @@
 
     <blockquote>Windows Snake on the desktop:</blockquote>
 
-    <img class="custom-img"
-         src="https://github.com/TobinCavanaugh/WindowsSnake/raw/master/desktop.png"
-         loading="lazy"
-         alt="Image of header file"
-    />
+    <img class="custom-img" src="https://github.com/TobinCavanaugh/WindowsSnake/raw/master/desktop.png" loading="lazy"
+        alt="Image of header file" />
 
     <p></p>
     <hr class="line">
 </details>
+
+</html>
