--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 
+
+
 <html lang="en">
-<meta name="description" description="Retro CRT amber styled portfolio website for Tobin Cavanaugh"
+
+<head>
+    <meta name="viewport" description="Retro CRT amber styled portfolio website for Tobin Cavanaugh"
     content="Author: Tobin Cavanaugh, Category: Portfolio, ">
+
+</head>
 
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
