new scaling and gif added

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <blockquote>Windows Snake in front of Clion:</blockquote>
 
-    <img class="custom-img" src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/codeimage.png"
+    <img class="custom-img one-by-one" src="https://raw.githubusercontent.com/TobinCavanaugh/WindowsSnake/master/codeimage.png"
         loading="lazy" alt="An image of a snake game being played over the IDE clion" />
 
     <p></p>
