--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <blockquote>Open Blend Directory in action:</blockquote>
 
-    <img class="custom-img"
+    <img class="custom-img custom-gif"
         src="https://user-images.githubusercontent.com/71297845/239706698-c150ded9-b676-467e-a1ef-e186d8005d71.gif"
         loading="lazy" alt="Gif of blender, user presses alt + shift + r and a windows explorer opens" />
 
