--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <div class="centerGradient"></div>
 <div class="noise-layer"></div>
+<div class="screen-door"></div>
 
 
 <title>Tobin Cavanaugh Portfolio</title>
