--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="centerGradient"></div>
 <div class="noise-layer"></div>
@@ -34,7 +35,7 @@
 
     <h2>
         <!----Git URL -->
-        <a href="https://github.com/TobinCavanaugh" target="_blank" onclick="playSound('click')">Readme.MD</a>
+        <a href="https://github.com/TobinCavanaugh" target="_blank" onclick="playSound('click')">Readme.md</a>
         <!------------------------Project Name-->
     </h2>
     <div id="text-container"></div>
