--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
     <summary onmouseover="playSound('hoverclick')">ReadMe</summary>
     <hr class="line">
 
-    <h2>
-        <!----Git URL -->
-        <a href="https://github.com/TobinCavanaugh" target="_blank" onclick="playSound('click')">Readme.md</a>
-        <!------------------------Project Name-->
-    </h2>
+    <h2><a href="https://github.com/TobinCavanaugh" target="_blank" onclick="playSound('click')">Readme.md</a></h2>
+
     <div id="text-container"></div>
     <script>
         // URL of the text file
