--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         content="Author: Tobin Cavanaugh, Category: Portfolio, ">
 </head>
 
+
+
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -22,6 +24,9 @@
 <header>
     Tobin Cavanaugh
 </header>
+
+<div class="splashscreen"></div>
+<div class="splashscreen-bg"></div>
 
 <!--Mute/Unmute Button-->
 <img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Icons/Speaker_Icon.png','Icons/Mute_Icon.png')"
